--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
+bcrypt==4.1.3
 blinker==1.8.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
+dnspython==2.6.1
+email_validator==2.2.0
 Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-WTF==1.2.1
 greenlet==3.0.3
+idna==3.7
 importlib_metadata==8.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
+requests==2.32.3
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
+urllib3==2.2.2
 Werkzeug==3.0.3
+WTForms==3.1.2
 zipp==3.19.2
